--- a/application/src/pages/404.astro
+++ b/application/src/pages/404.astro
@@ -8,7 +8,7 @@ import Post from "~/layouts/post.astro";
 	<Post>
 		<h1 class="mb-1">404</h1>
 		<p class="text-on-surface-variant mt-0 mb-8">This page doesn't exist (yet?)</p>
-		<p>Hope you'll find what you're looking for. Or just execute the following code:</p>
+		<p>Hope you'll find what you're looking for. Or maybe you want to try the following code:</p>
 		<Content />
 	</Post>
 </Base>
