--- a/application/src/pages/404.astro
+++ b/application/src/pages/404.astro
@@ -5,6 +5,7 @@ import Post from "~/layouts/post.astro";
 ---
 
 <Base title="ceo — Not Found" color="#0ea5e9">
+	<meta slot="meta" name="description" content="A personal blog by Carlos Paludetto" />
 	<Post>
 		<h1 class="mb-1">404</h1>
 		<p class="text-on-surface-variant mt-0 mb-8">This page doesn't exist (yet?)</p>
