--- a/application/src/layouts/base.astro
+++ b/application/src/layouts/base.astro
@@ -26,7 +26,7 @@ const theme = createThemeFromBaseColor(color);
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="A personal blog by Carlos Paludetto" />
+		<slot name="meta" />
 		<title>{title}</title>
 		<style is:global set:html={injectIntoRoot(theme)}></style>
 		<style>
