feat: minify injected css

--- a/application/src/components/footer.astro
+++ b/application/src/components/footer.astro
@@ -1,10 +1,10 @@
-<footer class="max-w-[70ch] mx-auto px-8 pb-8 text-center">
+<footer class="mx-auto max-w-[70ch] px-8 pb-8 text-center">
 	<p class="text-on-surface-variant">
 		by
 		<a
 			target="_blank"
 			rel="noopener noreferrer"
-			class="text-primary underline decoration-primary/30 hover:decoration-primary decoration-wavy underline-offset-2"
+			class="text-primary underline decoration-primary/30 decoration-wavy underline-offset-2 hover:decoration-primary"
 			href="https://www.github.com/ceopaludetto"
 		>
 			Carlos Paludetto
