--- a/application/src/components/header.astro
+++ b/application/src/components/header.astro
@@ -1,3 +1,3 @@
-<header class="max-w-[70ch] px-4 lg:px-8 pt-8 mx-auto">
+<header class="mx-auto max-w-[70ch] px-4 pt-8 lg:px-8">
 	<a href="/" class="font-serif text-display-large">ceo<span class="text-primary">.</span></a>
 </header>
