--- a/application/src/layouts/post.astro
+++ b/application/src/layouts/post.astro
@@ -4,7 +4,7 @@ import "@shikijs/twoslash/style-rich.css";
 ---
 
 <main
-	class="py-8 px-4 lg:px-8 prose prose-ul:pl-4 prose-headings:font-serif prose-h1:text-display-small prose-h2:text-headline-medium prose-h3:text-headline-small prose-p:text-body-large prose-a:underline-offset-2 prose-a:font-normal prose-a:decoration-wavy prose-a:decoration-primary/30 hover:prose-a:decoration-primary max-w-[70ch] mx-auto"
+	class="prose mx-auto max-w-[70ch] px-4 py-8 prose-headings:font-serif prose-h1:text-display-small prose-h2:text-headline-medium prose-h3:text-headline-small prose-p:text-body-large prose-a:font-normal prose-a:decoration-primary/30 prose-a:decoration-wavy prose-a:underline-offset-2 hover:prose-a:decoration-primary prose-ul:pl-4 lg:px-8"
 >
 	<slot />
 </main>
