--- a/application/src/pages/404.astro
+++ b/application/src/pages/404.astro
@@ -5,10 +5,9 @@ import Post from "~/layouts/post.astro";
 ---
 
 <Base title="ceo — Not Found" color="#0ea5e9">
-	<meta slot="meta" name="description" content="A personal blog by Carlos Paludetto" />
 	<Post>
 		<h1 class="mb-1">404</h1>
-		<p class="text-on-surface-variant mt-0 mb-8">This page doesn't exist (yet?)</p>
+		<p class="mb-8 mt-0 text-on-surface-variant">This page doesn't exist (yet?)</p>
 		<p>Hope you'll find what you're looking for. Or maybe you want to try the following code:</p>
 		<Content />
 	</Post>
