--- a/application/src/layouts/base.astro
+++ b/application/src/layouts/base.astro
@@ -1,5 +1,5 @@
 ---
-import "@fontsource/lora/latin-500.css";
+import "@fontsource/lora/latin-400.css";
 import "@fontsource/monaspace-neon/latin-400.css";
 import "@fontsource/poppins/latin-400.css";
 import "@fontsource/poppins/latin-500.css";
@@ -17,6 +17,11 @@ type Props = {
 const { color, class: className, title } = Astro.props;
 
 const theme = createThemeFromBaseColor(color);
+
+const canonical = import.meta.env.SITE;
+const description = "A personal blog by Carlos Paludetto";
+
+const image = `${import.meta.env.SITE}/favicon.svg`;
 ---
 
 <html lang="en">
@@ -26,14 +31,24 @@ const theme = createThemeFromBaseColor(color);
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<slot name="meta" />
+		<slot name="meta">
+			<meta name="description" content={title} />
+			<link rel="canonical" href={canonical} />
+
+			<meta property="og:title" content={title} />
+			<meta property="og:description" content={description} />
+			<meta property="og:url" content={canonical} />
+			<meta property="og:image" content={image} />
+			<meta property="og:type" content="article" />
+
+			<meta name="twitter:card" content="summary" />
+			<meta name="twitter:title" content={title} />
+			<meta name="twitter:description" content={description} />
+			<meta name="twitter:image" content={image} />
+			<meta name="twitter:creator" content="@ceopaludetto" />
+		</slot>
 		<title>{title}</title>
-		<style is:global set:html={injectIntoRoot(theme)}></style>
-		<style>
-			body {
-				@apply overflow-x-hidden;
-			}
-		</style>
+		<style set:html={injectIntoRoot(theme)}></style>
 	</head>
 	<body class={className}>
 		<Header />
