--- a/application/src/layouts/base.astro
+++ b/application/src/layouts/base.astro
@@ -21,13 +21,13 @@ const theme = createThemeFromBaseColor(color);
 const canonical = import.meta.env.SITE;
 const description = "A personal blog by Carlos Paludetto";
 
-const image = `${import.meta.env.SITE}/favicon.svg`;
+const image = `${import.meta.env.SITE}/favicon.png`;
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" href="/favicon.png" sizes="300x300" />
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
@@ -39,7 +39,7 @@ const image = `${import.meta.env.SITE}/favicon.svg`;
 			<meta property="og:description" content={description} />
 			<meta property="og:url" content={canonical} />
 			<meta property="og:image" content={image} />
-			<meta property="og:type" content="article" />
+			<meta property="og:type" content="website" />
 
 			<meta name="twitter:card" content="summary" />
 			<meta name="twitter:title" content={title} />
