feat: add rss feed, move posts to own package, show dependency map on each post

--- a/application/src/pages/404.astro
+++ b/application/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import { Content } from "~/data/back.mdx";
+import { Content } from "~/components/back.mdx";
 import Base from "~/layouts/base.astro";
 import Post from "~/layouts/post.astro";
 ---
