--- a/application/src/layouts/base.astro
+++ b/application/src/layouts/base.astro
@@ -21,7 +21,8 @@ const theme = createThemeFromBaseColor(color);
 const canonical = import.meta.env.SITE;
 const description = "A personal blog by Carlos Paludetto";
 
-const image = `${import.meta.env.SITE}/favicon.png`;
+const image = `${canonical}/favicon.png`;
+const rss = `${canonical}/rss.xml`;
 ---
 
 <html lang="en">
@@ -29,10 +30,11 @@ const image = `${import.meta.env.SITE}/favicon.png`;
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/png" href="/favicon.png" sizes="300x300" />
 		<link rel="sitemap" href="/sitemap-index.xml" />
+		<link rel="alternate" type="application/rss+xml" href={rss} />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<slot name="meta">
-			<meta name="description" content={title} />
+			<meta name="description" content={description} />
 			<link rel="canonical" href={canonical} />
 
 			<meta property="og:title" content={title} />
